# discord-standby-bot

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  default.nix  env.sh  fly.toml  go.mod  go.sum  main.go
src/: config.rs  handlers.rs  main.rs  messages.rs  queue.rs  queue_tests.rs  redis_store.rs  translations.rs
v2/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
v2/src/: config.rs  handlers.rs  main.rs  messages.rs  queue.rs  redis_store.rs  translations.rs
